feat: add rolling wheel, UI and ok check
